Small fixes after initial commit